--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
             <nav class="d-flex justify-content-between">
-                <a href="registration.html" title="Homepage">
+                <a href="index.html" title="Homepage">
                     <img src="images/logo1.jpg" class="logo" alt="RDPM" />
                 </a>
                 <ul class="nav justify-content-end">
