--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/" title="Homepage">iyandikishe/injira</a>
+                    <a class="nav-link disabled" href="index.html" title="Homepage">iyandikishe/injira</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="disasterAlerts.html" title="About Carine">ubutumwa bwi'integuza</a>
