--- a/safety.html
+++ b/safety.html
@@ -17,7 +17,7 @@
         </a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="registration.html" title="Homepage">iyandikishe/injira</a>
+                <a class="nav-link active" href="index.html" title="Homepage">iyandikishe/injira</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="disasterAlerts.html" title="About Carine">ubutumwa bwi'integuza</a>
