--- a/disasterAlerts.html
+++ b/disasterAlerts.html
@@ -21,7 +21,7 @@
     </a>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-                <a class="nav-link active" href="registration.html" title="registartion">iyandikishe/injira</a>
+                <a class="nav-link active" href="index.html" title="registartion">iyandikishe/injira</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="disasterAlerts.html" title="weather data">ubutumwa bwi'integuza</a>
