--- a/disasterAlerts.html
+++ b/disasterAlerts.html
@@ -80,8 +80,8 @@
             <div class="owner">
             <a href="https://github.com/Carine-69" target="_blank">Carine UMUGABEKAZI</a>,
         open source 
-            <a href="https://github.com/Carine-69/shecodes-plus-projet" target="_blank">GitHub</a> and deployed  on
-            <a href="https://app.netlify.com/sites/sweet-gingersnap-deeaaf/deploys" target="_blank">Netlify</a>
+            <a href="https://github.com/Carine-69/RDPM-js" target="_blank">GitHub</a> and deployed  on
+            <a href="https://app.netlify.com/sites/cosmic-pudding-83148d/deploys" target="_blank">Netlify</a>
         </div>
         </footer>
     </header>
